[gd_scene load_steps=8 format=3 uid="uid://qpukgkbptjio"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_hpt1c"]
[ext_resource type="FontFile" uid="uid://dhcubomh0v2j6" path="res://text/Another Danger - Demo.otf" id="2_5b21v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2gc10"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t0xrk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f8fv2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lp0ff"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xftaa"]

[node name="PauseMenu" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.301961, 0.301961, 0.301961, 1)
script = ExtResource("1_hpt1c")

[node name="MarginContainer" type="MarginContainer" parent="."]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -55.5
offset_bottom = 55.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.772549, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.0117647, 0.00784314, 0.00392157, 1)
theme_override_fonts/font = ExtResource("2_5b21v")
theme_override_font_sizes/font_size = 90
text = "Project HillBilly"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 75)
layout_mode = 2

[node name="ResumeBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.618984, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.365217, 3.08343e-07, 0.00384617, 1)
theme_override_colors/font_hover_color = Color(0.964706, 0.972549, 1, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_2gc10")
theme_override_styles/hover = SubResource("StyleBoxEmpty_t0xrk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_f8fv2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lp0ff")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xftaa")
text = "Resume
"

[node name="TutorialBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.618984, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.365217, 3.08343e-07, 0.00384617, 1)
theme_override_colors/font_hover_color = Color(0.96344, 0.973835, 0.998336, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_2gc10")
theme_override_styles/hover = SubResource("StyleBoxEmpty_t0xrk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_f8fv2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lp0ff")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xftaa")
text = "Tutorial
"

[node name="SettingsBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.618984, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.365217, 3.08343e-07, 0.00384617, 1)
theme_override_colors/font_hover_color = Color(0.96344, 0.973835, 0.998336, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_2gc10")
theme_override_styles/hover = SubResource("StyleBoxEmpty_t0xrk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_f8fv2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lp0ff")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xftaa")
text = "Settings
"

[node name="MenuBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.618984, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.365217, 3.08343e-07, 0.00384617, 1)
theme_override_colors/font_hover_color = Color(0.96344, 0.973835, 0.998336, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_2gc10")
theme_override_styles/hover = SubResource("StyleBoxEmpty_t0xrk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_f8fv2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lp0ff")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xftaa")
text = "Main Menu"

[node name="QuitBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.618984, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.365217, 3.08343e-07, 0.00384617, 1)
theme_override_colors/font_hover_color = Color(0.96344, 0.973835, 0.998336, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_2gc10")
theme_override_styles/hover = SubResource("StyleBoxEmpty_t0xrk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_f8fv2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lp0ff")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xftaa")
text = "Quit
"
